--- a/index.html
+++ b/index.html
@@ -10,36 +10,38 @@
   </head>
   <body class="font-sans antialiased text-gray-900">
     <!-- Navigation bar -->
-    <nav class="bg-blue-900 text-white">
+    <nav class="bg-white text-gray-900 shadow">
       <div class="container mx-auto px-4 py-4 flex items-center justify-between">
+        <!-- Site title / logo -->
         <a href="index.html" class="text-2xl font-bold">La Voix d’un Voyageur</a>
+        <!-- Mobile menu toggle -->
         <button id="nav-toggle" class="md:hidden focus:outline-none">
           <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
           </svg>
         </button>
-        <ul id="nav-menu" class="hidden md:flex space-x-6">
-          <li><a href="index.html" class="hover:underline">Accueil</a></li>
-          <li><a href="apropos.html" class="hover:underline">À propos</a></li>
-          <li><a href="histoires.html" class="hover:underline">Histoires</a></li>
-          <li><a href="statistiques.html" class="hover:underline">Statistiques</a></li>
-          <li><a href="temoignages.html" class="hover:underline">Témoignages</a></li>
-          <li><a href="jeu.html" class="hover:underline">Jeu</a></li>
-          <li><a href="contact.html" class="hover:underline">Contact</a></li>
+        <!-- Desktop navigation -->
+        <ul id="nav-menu" class="hidden md:flex space-x-6 items-center">
+          <li><a href="index.html" class="text-orange-600 font-semibold">Accueil</a></li>
+          <li><a href="apropos.html" class="text-gray-700 hover:text-orange-600 transition">À propos</a></li>
+          <li><a href="histoires.html" class="text-gray-700 hover:text-orange-600 transition">Histoires</a></li>
+          <li><a href="statistiques.html" class="text-gray-700 hover:text-orange-600 transition">Statistiques</a></li>
+          <li><a href="temoignages.html" class="text-gray-700 hover:text-orange-600 transition">Témoignages</a></li>
+          <li><a href="jeu.html" class="text-gray-700 hover:text-orange-600 transition">Jeu</a></li>
+          <li><a href="contact.html" class="text-gray-700 hover:text-orange-600 transition">Contact</a></li>
         </ul>
       </div>
     </nav>
 
     <!-- Hero section -->
-    <header class="bg-gradient-to-b from-blue-900 to-blue-700 text-white py-24">
-      <div class="container mx-auto px-4 text-center">
-        <h1 class="text-4xl md:text-6xl font-extrabold mb-6">Racines et Ailes du Sénégal</h1>
-        <p class="text-lg md:text-2xl mb-8 max-w-2xl mx-auto">
-          Explorez les récits poignants et interactifs de ceux qui rêvent d’ailleurs. Découvrez
-          les réalités du parcours migratoire et les alternatives locales à travers un
-          voyage multimédia immersif.
-        </p>
-        <a href="histoires.html" class="bg-yellow-400 text-blue-900 font-semibold px-8 py-3 rounded-md shadow hover:bg-yellow-300 transition duration-300">Découvrir les histoires</a>
+    <header class="relative py-24 bg-gray-100">
+      <div class="container mx-auto px-4 flex justify-center">
+        <!-- Card with hero content inspired by the Figma mock‑up -->
+        <div class="bg-white/80 backdrop-blur-lg rounded-3xl shadow-lg p-10 text-center max-w-3xl">
+          <h1 class="text-4xl md:text-5xl font-extrabold mb-4 text-gray-800">Découvrez La Voix de Modou</h1>
+          <p class="text-lg md:text-xl mb-6 text-gray-700">Une expérience interactive</p>
+          <a href="histoires.html" class="inline-block bg-yellow-400 text-blue-900 font-semibold px-8 py-3 rounded-full shadow hover:bg-yellow-300 transition">Commencer l’expérience</a>
+        </div>
       </div>
     </header>
 
@@ -88,31 +90,28 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-blue-900 text-white py-8">
+    <footer class="bg-gray-900 text-gray-200 py-12">
       <div class="container mx-auto px-4 grid md:grid-cols-2 gap-8">
         <div>
-          <h4 class="text-lg font-semibold mb-2">À propos du projet</h4>
-          <p class="text-sm text-gray-300">
-            « La Voix d’un Voyageur » est une initiative du projet transmédia
-            « Racines et Ailes du Sénégal » visant à sensibiliser aux réalités du
-            parcours migratoire irrégulier et à mettre en lumière les alternatives
-            locales.
+          <h4 class="text-lg font-semibold mb-4">À propos du projet</h4>
+          <p class="text-sm text-gray-400">
+            « La Voix d’un Voyageur » est une initiative du projet transmédia « Racines et Ailes du Sénégal » visant à sensibiliser aux réalités du parcours migratoire irrégulier et à mettre en lumière les alternatives locales.
           </p>
         </div>
         <div>
-          <h4 class="text-lg font-semibold mb-2">Navigation</h4>
-          <ul class="text-sm space-y-1">
-            <li><a href="apropos.html" class="hover:underline">À propos</a></li>
-            <li><a href="histoires.html" class="hover:underline">Histoires</a></li>
-            <li><a href="statistiques.html" class="hover:underline">Statistiques</a></li>
-            <li><a href="temoignages.html" class="hover:underline">Témoignages</a></li>
-            <li><a href="jeu.html" class="hover:underline">Jeu interactif</a></li>
-            <li><a href="contact.html" class="hover:underline">Contact</a></li>
-            <li><a href="mentions.html" class="hover:underline">Mentions légales</a></li>
+          <h4 class="text-lg font-semibold mb-4">Navigation</h4>
+          <ul class="text-sm space-y-2">
+            <li><a href="apropos.html" class="hover:text-yellow-400 transition">À propos</a></li>
+            <li><a href="histoires.html" class="hover:text-yellow-400 transition">Histoires</a></li>
+            <li><a href="statistiques.html" class="hover:text-yellow-400 transition">Statistiques</a></li>
+            <li><a href="temoignages.html" class="hover:text-yellow-400 transition">Témoignages</a></li>
+            <li><a href="jeu.html" class="hover:text-yellow-400 transition">Jeu interactif</a></li>
+            <li><a href="contact.html" class="hover:text-yellow-400 transition">Contact</a></li>
+            <li><a href="mentions.html" class="hover:text-yellow-400 transition">Mentions légales</a></li>
           </ul>
         </div>
       </div>
-      <div class="mt-8 text-center text-xs text-gray-400">&copy; 2025 Racines et Ailes du Sénégal. Tous droits réservés.</div>
+      <div class="mt-10 text-center text-xs text-gray-500">&copy; 2025 Racines et Ailes du Sénégal. Tous droits réservés.</div>
     </footer>
 
     <!-- Mobile nav toggle script -->
